--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "todoapp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.ts",
   "scripts": {
     "start": "nodemon",
     "test1": "echo \"Error: no test specified\" && exit 1",
-    "test": "mocha --require ts-node/register test/**.spec.ts"
+    "test": "nyc mocha --require ts-node/register test/**.spec.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/chai": "^4.3.11",
     "@types/chai-http": "^4.2.0",
@@ -23,32 +23,56 @@
     "@types/mocha": "^10.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/sinon": "^17.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "chai": "^4.3.5",
     "chai-http": "^4.4.0",
     "mocha": "^10.3.0",
     "mochawesome": "^7.1.3",
     "mochawesome-report-generator": "^6.2.0",
     "nodemon": "^3.0.3",
+    "openapi": "^1.0.1",
     "sinon": "^17.0.1",
     "supertest": "^6.3.4",
+    "swagger": "^0.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "typings": "^2.1.1",
     "util": "^0.12.5"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.0.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "nock": "^13.5.4",
-    "nyc": "^15.1.0"
-  }
+    "nodemailer": "^6.9.11",
+    "nyc": "^15.1.0",
+    "sharp": "^0.33.2"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "description": ""
 }
