--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nodemon",
     "test1": "echo \"Error: no test specified\" && exit 1",
-    "test": "nyc mocha --require ts-node/register test/**.spec.ts"
+    "test": "mocha --require ts-node/register test/**.spec.ts",
+    "test_cover": "nyc mocha --require ts-node/register test/**.spec.ts"
   },
   "keywords": [],
   "author": "",
